[workspace]
resolver = "2"
members = [
    "examples/helloworld",
    "examples/fungible-token-standard",
    "examples/ebpf-counter",
    "examples/oracle",
    "program",
    "sdk",
    "bip322",
]

[workspace.dependencies]
borsh = "1.5.0"
hex = "0.4.3"
memoffset = "0.9.0"
rustversion = "1.0.14"
thiserror = "2.0.3"
bitcoin = "0.32.4"
sha256 = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
proptest = "1.2.0"
rand = "0.8.5"
base64 = "0.22.1"
snafu = "0.8.5"
sdk = { path = "sdk" }