[package]
name = "arch_program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = { workspace = true }
hex = { workspace = true }
memoffset = { workspace = true }
rustversion = { workspace = true }
thiserror = { workspace = true }
bitcoin = { workspace = true }
sha256 = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rand = { workspace = true}
