[package]
name = "sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
arch_program = { workspace = true }

borsh = { workspace = true }
proptest = "1.5.0"
serde.workspace = true
sha256 = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
serde_json.workspace = true
bitcoincore-rpc = "0.19.0"
bitcoin = { version = "0.32.3", features = ["serde", "rand"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
indicatif = "0.17.8"
snafu = "0.8.5"
base64 = "0.22.1"
bip322 = { path = "../bip322" }
