[package]
name = "fungible-token-standard"
version = "0.1.0"
edition = "2021"

[dependencies]
arch_program = { path = "../../program" }
ebpf-counter =  { path = "../ebpf-counter" }
sdk = { path = "../../sdk" }
fungible-token-standard-program = { path = "./program" , features = ["no-entrypoint"] }

bitcoincore-rpc = "0.18.0"
hex = "0.4.3"
borsh = { version = "1.4.0", features = ["derive"] }
bitcoin = { version = "0.32.3", features = ["serde"] }
log = "0.4"
anyhow = "1.0.82"
env_logger = "0.10"
termsize = "0.1.9"

[dev-dependencies]
serial_test = "3.1.1"

[lib]
path = "src/lib.rs"
