[package]
name = "helloworld"
version = "0.1.0"
edition = "2021"

[dependencies]
sdk = { path = "../../sdk" }
arch_program = { path = "../../program" }
bip322 = { path = "../../bip322" }

bitcoincore-rpc = "0.18.0"
hex = "0.4.3"
borsh = { version = "1.4.0", features = ["derive"] }
bitcoin = { version = "0.32.3", features = ["serde", "rand"] }
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
serial_test = "3.1.1"

[lib]
path = "src/lib.rs"
